--- a/public/asset/css/style.css
+++ b/public/asset/css/style.css
@@ -27595,7 +27595,7 @@ table.dataTable thead .sorting {
       font-size: 14px; } }
 
 .authincation-content {
-  background: #FE634E;
+  background: #06D2A4;
   box-shadow: 0 0 35px 0 rgba(154, 161, 171, 0.15);
   border-radius: 5px; }
   [data-theme-version="dark"] .authincation-content {
